2010-12-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/common.py:
	  Make it clear when we actually generate an expected output file
	  the first time.

2010-12-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Add WITH_CLEANUP implementation for the case where TOS is None.
	  Now can check unittest.case

2010-12-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Add SETUP_WITH implementation, similar to SETUP_FINALLY.
	  Fixes one of the two unimplemented opcodes warnings about
	  unittest.case

2010-12-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Mark SETUP_WITH and BUILD_SET as unimplemented.
	  Makes unit tests pass again.

2010-12-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Instead of peaking two intstructions ahead past POP_TOP for
	  LOAD_CONST, with the new POP/JUMP instructions, peak only one
	  ahead.
	  Fixes test 85 for 2.7.

2010-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Implement support for SET_ADD, MAP_ADD and the new style
	  LIST_APPEND.

2010-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Implement support for JUMP_IF_FALSE/TRUE and
	  JUMP_IF_FALSE/TRUE_OR_POP.
	  Brings 2.7 test failures from 33 to 7.
	  Compared to 2.6, the only difference is 85 now failing and 78
	  passing.

2010-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Rearrange opcodes for 2.7, without implementing new or
	  changed opcodes.
	  Brings 2.7 test failures from 54 to 33.

2010-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* HACKING:
	  Add notes on updating to newer Python version.
	* pychecker/OP.py:
	  Adapt to opcode changes and additions.
	  Brings 2.7 test failures from 69 to 54.
